--- a/ProAcc/Views/Customers/Create.cshtml
+++ b/ProAcc/Views/Customers/Create.cshtml
@@ -6,12 +6,7 @@
     Layout = "~/Views/shared/_Layout.cshtml";
 }
 
-<style>
-    span{
-        color: red;
-    font-size: 14px;
-    }
-</style>
+
 <a class="card-title">Create Customer</a>
 <hr />
 <div style="padding:1em;">
@@ -29,7 +24,7 @@
                     @*<span id="lblCompanyName" style="color:red" />*@
                 </div>
                 <div>
-                    &nbsp;&nbsp;&nbsp;<span id="lblCompanyName">&nbsp;</span>
+                    &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblCompanyName">&nbsp;</span>
                 </div>
             </div>
 
@@ -45,7 +40,7 @@
                     </select>
                 </div>
                 <div>
-                    &nbsp;&nbsp;&nbsp;<span id="lblIndustrySector">&nbsp;</span>
+                    &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblIndustrySector">&nbsp;</span>
                 </div>
             </div>
 
@@ -66,7 +61,7 @@
                     @*<span id="lblCustomerEmail" style="color:red" />*@
                 </div>
                 <div>
-                    &nbsp;&nbsp;&nbsp;<span id="lblContact">&nbsp;</span>
+                    &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblContact">&nbsp;</span>
                 </div>
             </div>
 
@@ -81,7 +76,7 @@
                     @*<span id="lblCustomerEmail" style="color:red" />*@
                 </div>
                 <div>
-                    &nbsp;&nbsp;&nbsp;<span id="lblCustomerEmail">&nbsp;</span>
+                    &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblCustomerEmail">&nbsp;</span>
                 </div>
             </div>
 
@@ -92,7 +87,7 @@
                     @*<span id="lblCustomerPhone" style="color:red" />*@
                 </div>
                 <div>
-                    &nbsp;&nbsp;&nbsp;<span id="lblCustomerPhone">&nbsp;</span>
+                    &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblCustomerPhone">&nbsp;</span>
                 </div>
             </div>
         </div>
@@ -327,9 +322,26 @@
                 data: { Company_Name: CompanyName, IndustrySector_ID: IndustrySector, Phone: custphone, Email: custEmail ,Contact:Contact},
                     success: function (response) {
                         if (response == "success") {
-                            alert("Customer Saved successfully!");
-                            var url = $("#RedirectToCustomerList").val();
-                            location.href = url;
+                            $.alert({
+                                title: 'Sucess !',
+                                content: 'Customer Saved successfully..!',// <br> with some <strong>HTML</strong> <em>contents</em>',
+                                icon: 'fa fa-rocket',
+                                animation: 'scale',
+                                closeAnimation: 'scale',
+                                buttons: {
+                                    okay: {
+                                        text: 'Okay',
+                                        btnClass: 'btn-wide mb-2 mr-2 btn btn-primary form-control',
+                                        action: function (event, ui) {
+                                            $(this).remove();
+                                            var url = $("#RedirectToCustomerList").val();
+                                            location.href = url;
+                                        }
+                                    }
+                                }
+                            });
+                            //alert("");
+                           
                             //loadCustomer();
                             //$("#txtCompanyName").val("");
                             //$("#txtIndustrySector").val("");
