--- a/ProAcc/Views/Resource/ResourceAssessment.cshtml
+++ b/ProAcc/Views/Resource/ResourceAssessment.cshtml
@@ -177,18 +177,35 @@
             });
     $('#SubmitInstance').click(function () {
         var IDInstance = $("#IDInstance").val();
-         $.ajax({
-                    //url: '<%: Url.Action("Upload")%>?Cust_ID=' + Cust_ID + '&IDProject=' + IDProject+'&InstanceID='+InstanceID,
-                 url: '@Url.Action("SubmitInstance", "Home")',
-                 type: "POST",
-                 data: { 'IDInstance': IDInstance },
-                 success: function (result) {
-                     alert("New Live Instance updated");
-                     LoadTable(IDInstance);
-                     $('#jqGrid').trigger( 'reloadGrid' );
-                     //location.reload();
-                 }
+        $.ajax({
+            //url: '<%: Url.Action("Upload")%>?Cust_ID=' + Cust_ID + '&IDProject=' + IDProject+'&InstanceID='+InstanceID,
+            url: '@Url.Action("SubmitInstance", "Home")',
+            type: "POST",
+            data: { 'IDInstance': IDInstance },
+            success: function (result) {
+                $.alert({
+                    title: 'Alert !',
+                    content: 'New Live Instance updated',// <br> with some <strong>HTML</strong> <em>contents</em>',
+                    icon: 'fa fa-rocket',
+                    animation: 'scale',
+                    closeAnimation: 'scale',
+                    buttons: {
+                        okay: {
+                            text: 'Okay',
+                            btnClass: 'btn-wide mb-2 mr-2 btn btn-primary form-control',
+                            action: function (event, ui) {
+                                $(this).remove();
+                                LoadTable(IDInstance);
+                                $('#jqGrid').trigger('reloadGrid');
+                            }
+                        }
+                    }
+
                 });
+
+
+            }
+        });
     });
 </script>
 
@@ -385,6 +402,7 @@
                 closeAfterEdit: true,
                 beforeShowForm: function (form) {
                     //$("#PhaseId").attr("disabled", "disabled");
+                    $(".navButton").hide();
                     $("#tr_PhaseId").hide();
                     $("#tr_SequenceNum").hide();
 
@@ -416,6 +434,30 @@
                     //alert("In");
                     $("#tr_ActivityID").show();
                 },
+                reloadAfterSubmit: true,
+                //afterSubmit: function (Data) {
+                //    //debugger;
+                //    //if (Data.responseText == true) {
+                //    //    $.alert({
+                //    //        title: 'Alert !',
+                //    //        content: 'Resource Added Successfully..!',// <br> with some <strong>HTML</strong> <em>contents</em>',
+                //    //        icon: 'fa fa-rocket',
+                //    //        animation: 'scale',
+                //    //        closeAnimation: 'scale',
+                //    //        buttons: {
+                //    //            okay: {
+                //    //                text: 'Okay',
+                //    //                btnClass: 'btn-wide mb-2 mr-2 btn btn-primary form-control'
+                //    //                //action: function (event, ui) {
+                //    //                //    $(this).remove();
+                //    //                //    location.reload();
+                //    //                //}
+                //    //            }
+                //    //        }
+                //    //    });
+                //    //}
+                    
+                //},
                 errorTextFormat: function (data) {
                     return 'Error: ' + data.responseText
                 }
@@ -435,8 +477,30 @@
                         success: function (Data) {
 
                             if (Data) {
+
+                                $.alert({
+                                    title: 'Delete !',
+                                    content: 'Deleted Sussfully..!',// <br> with some <strong>HTML</strong> <em>contents</em>',
+                                    icon: 'fa fa-trfa-trash-o',
+                                    animation: 'scale',
+                                    closeAnimation: 'scale',
+                                    buttons: {
+                                        okay: {
+                                            text: 'Okay',
+                                            btnClass: 'btn-wide mb-2 mr-2 btn btn-primary form-control',
+                                            action: function (event, ui) {
+                                                $(this).remove();
+                                                //LoadTable(IDInstance);
+                                                $('#jqGrid').trigger('reloadGrid');
+                                            }
+                                        }
+                                    }
+
+                                });
+
+
                                 //debugger;
-                                alert("Deleted Sussfully..!");
+                                //alert("");
                             }
                             //for (var i = 0; i < Data.length; i++) {
                             //    var obj = {};
