--- a/ProAcc/Views/Activity/_ActivityCreationCreate.cshtml
+++ b/ProAcc/Views/Activity/_ActivityCreationCreate.cshtml
@@ -383,7 +383,24 @@
             data: { LatestTaskId: LatestTaskId, LastTaskId: LastTaskId,type:type },
             success: function (response) {
                 if (response == "success") {
-                    alert("activity Saved successfully!");
+                    $.alert({
+                        title: 'Alert !',
+                        content: 'Activity Saved Successfully..!',// <br> with some <strong>HTML</strong> <em>contents</em>',
+                        icon: 'fa fa-rocket',
+                        animation: 'scale',
+                        closeAnimation: 'scale',
+                        buttons: {
+                            okay: {
+                                text: 'Okay',
+                                btnClass: 'btn-wide mb-2 mr-2 btn btn-primary form-control'
+                                //action: function (event, ui) {
+                                //    $(this).remove();
+                                //    location.reload();
+                                //}
+                            }
+                        }
+                    });
+                    //alert("");
                     document.getElementById('id01').style.display = 'none';
                     loadActivityCreation();
                     $("#txtTask").val("");
