--- a/ProAcc/Views/Home/Home.cshtml
+++ b/ProAcc/Views/Home/Home.cshtml
@@ -690,37 +690,36 @@
 					$('#SubmitInstance').prop("disabled", false);
                 }
             });
+        $('#SubmitInstance').click(function () {
+            var IDInstance = $("#IDInstance").val();
+            $.ajax({
+                //url: '<%: Url.Action("Upload")%>?Cust_ID=' + Cust_ID + '&IDProject=' + IDProject+'&InstanceID='+InstanceID,
+                url: '@Url.Action("SubmitInstance", "Home")',
+                type: "POST",
+                data: { 'IDInstance': IDInstance },
+                success: function (result) {
+                    $.alert({
+                        title: 'Alert !',
+                        content: 'New Live Instance updated',// <br> with some <strong>HTML</strong> <em>contents</em>',
+                        icon: 'fa fa-rocket',
+                        animation: 'scale',
+                        closeAnimation: 'scale',
+                        buttons: {
+                            okay: {
+                                text: 'Okay',
+                                btnClass: 'btn-wide mb-2 mr-2 btn btn-primary form-control',
+                                action: function (event, ui) {
+                                    $(this).remove();
+                                    location.reload();
+                                }
+                            }
+                        }
+                    });
+                }
+            });
+        });
     });
-    $('#SubmitInstance').click(function () {
-        var IDInstance = $("#IDInstance").val();
-         $.ajax({
-                    //url: '<%: Url.Action("Upload")%>?Cust_ID=' + Cust_ID + '&IDProject=' + IDProject+'&InstanceID='+InstanceID,
-                 url: '@Url.Action("SubmitInstance", "Home")',
-                 type: "POST",
-                 data: { 'IDInstance': IDInstance },
-             success: function (result) {
-                 $.alert({
-                     title: 'Alert alert!',
-                     content: 'This is a simple alert. <br> with some <strong>HTML</strong> <em>contents</em>',
-                     icon: 'fa fa-rocket',
-                     animation: 'scale',
-                     closeAnimation: 'scale',
-                     buttons: {
-                         okay: {
-                             text: 'Okay',
-                             btnClass: 'btn-blue'
-                         }
-                     },
-                     close: function (event, ui) {
-                         location.reload();
-                     }
-                 });
-                 // alert("New Live Instance updated");
-                 //debugger;
-                     //location.reload();
-                 }
-                });
-    });
+    
 
 </script>
 <script type="text/javascript">
