--- a/ProAcc/Views/User/CreateUsers.cshtml
+++ b/ProAcc/Views/User/CreateUsers.cshtml
@@ -11,10 +11,7 @@
         font-weight: bold;
         color: red;
     }
-    span{
-        color: red;
-    font-size: 14px;
-    }
+   
 </style>
 <a class="card-title">User Creation</a>
 <hr />
@@ -37,7 +34,7 @@
 
                     </div>
                     <div>
-                        &nbsp;&nbsp;&nbsp;<span id="lblName1">&nbsp;</span>
+                        &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblName1">&nbsp;</span>
                     </div>
                 </div>
 
@@ -49,7 +46,7 @@
 
                     </div>
                     <div>
-                        &nbsp;&nbsp;&nbsp;<span id="StatusConsultant">&nbsp;</span>
+                        &nbsp;&nbsp;&nbsp;<span class="Class_span" id="StatusConsultant">&nbsp;</span>
                     </div>
                 </div>
 
@@ -72,7 +69,7 @@
                     </div>
                 </div>
                 <div>
-                    &nbsp;&nbsp;&nbsp; <span id="lblAltConsPwd">&nbsp;</span>
+                    &nbsp;&nbsp;&nbsp; <span class="Class_span" id="lblAltConsPwd">&nbsp;</span>
                 </div>
 
             </div>
@@ -85,7 +82,7 @@
 
                     </div>
                     <div>
-                        &nbsp;&nbsp;&nbsp;<span id="lblEmail1">&nbsp;</span>
+                        &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblEmail1">&nbsp;</span>
                     </div>
                 </div>
 
@@ -97,7 +94,7 @@
 
                     </div>
                     <div>
-                        &nbsp;&nbsp;&nbsp;<span id="lblMob1">&nbsp;</span>
+                        &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblMob1">&nbsp;</span>
                     </div>
                 </div>
 
