--- a/ProAcc/Views/ProjectCreation/_ProjectCreationCreate.cshtml
+++ b/ProAcc/Views/ProjectCreation/_ProjectCreationCreate.cshtml
@@ -215,12 +215,53 @@
                 data: { project_Name: projectName, Customer_Id: Customerid, Description: Description,ProjectManager_Id: PMID },
                     success: function (response) {
                         if (response == "success") {
-                            alert("Project Saved successfully!");
-                            loadProjectCreation();
-                            $("#txtProjectName").val("")
-                            $("#drpCustomer").val(0)
-                            $("#txtDescription").val("")
-                            $("#btnProjectCreate").show();
+                            $.alert({
+                                title: 'Sucess !',
+                                content: 'Project Saved successfully..!',// <br> with some <strong>HTML</strong> <em>contents</em>',
+                                icon: 'fa fa-rocket',
+                                animation: 'scale',
+                                closeAnimation: 'scale',
+                                buttons: {
+                                    okay: {
+                                        text: 'Okay',
+                                        btnClass: 'btn-wide mb-2 mr-2 btn btn-primary form-control',
+                                        action: function (event, ui) {
+                                           loadProjectCreation();
+                                            $("#txtProjectName").val("")
+                                            $("#drpCustomer").val(0)
+                                            $("#txtDescription").val("")
+                                            $("#btnProjectCreate").show();
+                                        }
+                                    }
+                                }
+                            });
+
+                            //$.alert({
+                            //    title: 'Sucess !',
+                            //    content: 'Project Saved successfully!',// <br> with some <strong>HTML</strong> <em>contents</em>',
+                            //    icon: 'fa fa-rocket',
+                            //    animation: 'scale',
+                            //    closeAnimation: 'scale',
+                            //    buttons: {
+                            //        okay: {
+                            //            text: 'Okay',
+                            //            btnClass: 'btn-wide mb-2 mr-2 btn btn-primary form-control',
+                            //            action: function (event, ui) {
+                            //                loadProjectCreation();
+                            //                $("#txtProjectName").val("")
+                            //                $("#drpCustomer").val(0)
+                            //                $("#txtDescription").val("")
+                            //                $("#btnProjectCreate").show();
+                            //            }
+                            //        }
+                            //    }
+                            //});
+                            //alert("Project Saved successfully!");
+                            //loadProjectCreation();
+                            //$("#txtProjectName").val("")
+                            //$("#drpCustomer").val(0)
+                            //$("#txtDescription").val("")
+                            //$("#btnProjectCreate").show();
                         }
                     },
                     failure: function (response) {
@@ -278,17 +319,42 @@
                     //dataType: "json",
                     success: function (response) {
                         if (response == "success") {
-                            alert("Project Edited successfully!");
-                           loadProjectCreation();
-                            $("#txtProjectName").val("")
-                            $("#drpCustomer").val(0)
-                            $("#drpProjectManager").val(0);
-                            $("#txtDescription").val("")
-                            $("#btnAddNew").hide();
-                            $("#btnProjectUpdate").hide();
-                            $("#btnProjectCreate").show();
-                            $("#prjtCreate").show();
-                            $("#prjtUpdate").hide();
+                             $.alert({
+                                title: 'Sucess !',
+                                content: 'Project Edited <strong>successfully</strong>..!',// <br> with some <strong>HTML</strong> <em>contents</em>',
+                                icon: 'fa fa-rocket',
+                                animation: 'scale',
+                                closeAnimation: 'scale',
+                                buttons: {
+                                    okay: {
+                                        text: 'Okay',
+                                        btnClass: 'btn-wide mb-2 mr-2 btn btn-primary form-control',
+                                        action: function (event, ui) {
+                                            loadProjectCreation();
+                                            $("#txtProjectName").val("")
+                                            $("#drpCustomer").val(0)
+                                            $("#drpProjectManager").val(0);
+                                            $("#txtDescription").val("")
+                                            $("#btnAddNew").hide();
+                                            $("#btnProjectUpdate").hide();
+                                            $("#btnProjectCreate").show();
+                                            $("#prjtCreate").show();
+                                            $("#prjtUpdate").hide();
+                                        }
+                                    }
+                                }
+                            });
+                           // alert("Project Edited successfully!");
+                           //loadProjectCreation();
+                           // $("#txtProjectName").val("")
+                           // $("#drpCustomer").val(0)
+                           // $("#drpProjectManager").val(0);
+                           // $("#txtDescription").val("")
+                           // $("#btnAddNew").hide();
+                           // $("#btnProjectUpdate").hide();
+                           // $("#btnProjectCreate").show();
+                           // $("#prjtCreate").show();
+                           // $("#prjtUpdate").hide();
                         }
                     },
                     failure: function (response) {
