Delete func implemented in all masters

--- a/ProAcc/Views/InstanceCreation/_InstanceIndex.cshtml
+++ b/ProAcc/Views/InstanceCreation/_InstanceIndex.cshtml
@@ -93,8 +93,11 @@
                         alert("Instance deleted successfully!");
                         //loadInstanceTable();
                         location.reload();
-                            $("#txtInstanceName").val("")
-                            $("#drpProject").val(0)
+                        $("#txtInstanceName").val("")
+                        $("#drpProject").val(0)
+                    }
+                    else {
+                        alert("Project monitor is in live");
                     }
                 },
                 failure: function (response) {
