--- a/ProAcc/Views/Role/_RoleIndex.cshtml
+++ b/ProAcc/Views/Role/_RoleIndex.cshtml
@@ -24,8 +24,8 @@
                 </td>
 
                 <td>
-                    <a href="#" id="btnEdit" class="editRole fa fa-edit"></a><input type="hidden" value="@item.RoleId" /> |
-                    <a href="#" class="btnRoleDelete fa fa-trash"></a><input type="hidden" value="@item.RoleId" />
+                    <a href="#" id="btnEdit" class="editRole fa fa-edit"></a><input type="hidden" value="@item.RoleId" /> 
+                    @*<a href="#" class="btnRoleDelete fa fa-trash"></a><input type="hidden" value="@item.RoleId" />*@
                 </td>
             </tr>
         }
